refactor: 배송 이벤트 collection에서 list로 변경